@@ -1,3 +1,8 @@
+2018-12-29  Tom Tromey  <tom@tromey.com>
+
+	* contrib/ari/update-web-ari.sh: Remove indent code.
+	* gdb_indent.sh: Remove.
+
 2018-12-28  Tom Tromey  <tom@tromey.com>
 
 	* source-cache.c (get_language_name): Conditionally compile.
